added atribute "ALT"

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Radio station</h1>
     <h2>Meme songs</h2>
-    <img src="78do28.jpg" width="150" height="100" >
+    <img src="78do28.jpg" width="150" height="100" alt="kartinka">
     
 </body>
 </html>
