--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <div class="wrapper-logo">
+        <img src="Logo.png" alt="kartinka">
+        <div>Your favorite radio</div>
+    </div>
+   
     <h1>Radio station</h1>
-    <h2>Meme songs</h2>
-    <img src="78do28.jpg" width="150" height="100" alt="kartinka">
+    <div>Meme songs</div>
+
     
 </body>
 </html>
