beautiful flag added update

--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+
+    <link rel="stylesheet" href="style.css">
+    <title>Radio</title>
 </head>
+
 <body>
 
+    <div class="container">
 
-    <div class="wrapper-logo">
-        <img src="Logo.png" alt="kartinka">
-        <div>Your favorite radio</div>
+        <section class="header">
+
+        <div class="wrapper-logo">
+            <img src="Logo.png" alt="kartinka">
+            <div>Your favorite radio</div>
+        </div>
+
+        <h1>Radio station</h1>
+        <div class="text">Meme songs</div>
+
+        </section>
+
+
+        <section class="main">
+            <div class="wrapper-logo">
+                <img src="Logo.png" alt="kartinka">
+                <div>Your favorite radio</div>
+            </div>
+        
+            <h1>Radio station</h1>
+            <div class="text">Meme songs</div>
+        </section>
+
+        <section class="footer">
+
+            <div class="text">Meme songs</div>
+
+            <p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sequi repellendus corrupti accusantium, officiis laudantium a accusamus reprehenderit! Non quam earum, dignissimos suscipit deleniti iste, delectus repellendus esse natus nobis, possimus recusandae harum molestias? Accusamus excepturi molestiae unde, illo labore aperiam qui dolore et at id asperiores aspernatur doloribus quod nam iste ad voluptatem incidunt ratione deserunt. Natus recusandae harum molestias, expedita excepturi dolore necessitatibus. Fuga pariatur repudiandae rerum quae voluptatem animi ut enim vitae qui architecto velit saepe quis labore ad maxime, eveniet earum deserunt tenetur sed dolores corrupti culpa nam eius? Nam nihil consequatur commodi enim eveniet repellat.
+            </p>
+        </section>
     </div>
-   
-    <h1>Radio station</h1>
-    <div>Meme songs</div>
 
-    
+
+  
+
 </body>
+
 </html>
